<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="62dp"
    android:background="#E0E0E0"
    >

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_title_placeholder"
        />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainTitle"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sub_title_placeholder"
        />

	<Button
	    android:id="@+id/removeButton"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_alignParentRight="true"
		android:paddingLeft="10dp"
        android:paddingRight="10dp"
   		android:background="#E00000"
	    android:textColor="#FFFFFFFF"
        android:text="@string/remove_button_title"
	    />
		
		<!-- 
		android:visibility="invisible" 
		-->
		    
</RelativeLayout>
